--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "author": "Biorelate Ltd.",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@babel/core": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.0",
